--- a/src/assets/styles/includes/_shared.scss
+++ b/src/assets/styles/includes/_shared.scss
@@ -75,38 +75,19 @@ p{
   font-size: $size-normal;
 }
 
-// Equal Height
-
-.row-eq-height {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 //Generals
 
 *{
 	outline: none!important;
 }
 
-// Loader
+// Generics
 
-#loader{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-	height: 100vh;
-	width: 100vw;
-	background-color: $color-dark-purple;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 99999;
-	img{
-		height: 300px;
-		width: 300px;
-	}
+.center-translate {
+  left: 50%;
+  position: relative;
+  -webkit-transform: translate(-50%, 0) !important;
+  -moz-transform: translate(-50%, 0) !important;
+  -ms-transform: translate(-50%, 0) !important;
+  transform: translate(-50%, 0) !important;
 }
