--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,12 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:200,300");
-@font-face {
-  font-family: "TrajanPro-Regular";
-  src: url("../fonts/TrajanPro-Regular.eot?") format("eot"), url("../fonts/TrajanPro-Regular.woff") format("woff"), url("../fonts/TrajanPro-Regular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "AfterMidnite";
-  src: url("../fonts/AfterMidnite.eot?") format("eot"), url("../fonts/AfterMidnite.woff") format("woff"), url("../fonts/AfterMidnite.ttf") format("truetype"); }
-
 * {
   outline: none; }
 
@@ -63,10 +54,48 @@ p {
 * {
   outline: none !important; }
 
-.center-translate {
+.center-translate, .button {
   left: 50%;
   position: relative;
   -webkit-transform: translate(-50%, 0) !important;
   -moz-transform: translate(-50%, 0) !important;
   -ms-transform: translate(-50%, 0) !important;
   transform: translate(-50%, 0) !important; }
+
+.button {
+  cursor: pointer;
+  width: 260px;
+  border-radius: 40px;
+  height: 60px;
+  line-height: 38px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1rem; }
+  @media only screen and (max-width: 768px) {
+    .button {
+      height: 50px;
+      width: 220px !important;
+      font-size: 0.9rem; } }
+
+.button-transparent {
+  border: 1px solid #F2E9E4;
+  background-color: transparent;
+  color: #F2E9E4;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transform: all 0.3s ease-in-out 0s;
+  -ms-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s; }
+  .button-transparent:hover {
+    background-color: #F2E9E4;
+    color: #22223B; }
+
+.button-white {
+  border: 1px solid #F2E9E4;
+  background-color: #F2E9E4;
+  color: #4A4E69;
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transform: all 0.3s ease-in-out 0s;
+  -ms-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s; }
+  .button-white:hover {
+    background-color: transparent;
+    color: #F2E9E4; }
