--- a/src/components/Section/section.css
+++ b/src/components/Section/section.css
@@ -1,6 +1,6 @@
 section {
-  padding-top: 8rem;
-  padding-bottom: 6rem; }
+  padding-top: 7rem;
+  padding-bottom: 5rem; }
   @media only screen and (max-width: 768px) {
     section {
       padding-top: 6rem;
@@ -27,5 +27,14 @@ section#apresentacao {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(rgba(74, 74, 105, 0.8), rgba(74, 74, 105, 0.8)), url("../../assets/images/geovanna-bg-home.jpg");
+  background: linear-gradient(rgba(74, 74, 105, 0.8), rgba(74, 74, 105, 0.8)), url("../../assets/images/geovanna-bg-presentation.jpg");
+  background-position: center center; }
+
+section#servicos {
+  background: linear-gradient(rgba(34, 34, 59, 0.84), rgba(34, 34, 59, 0.98)), url("../../assets/images/geovanna-bg-services.jpg");
+  background-position: center center;
+  background-size: cover; }
+
+section#contato {
+  background: linear-gradient(rgba(34, 34, 59, 0.8), rgba(34, 34, 59, 0.9)), url("../../assets/images/geovanna-bg-contact.jpg");
   background-position: center center; }
