--- a/src/components/Section/section.css
+++ b/src/components/Section/section.css
@@ -23,18 +23,18 @@ section#home {
       height: calc(100vh - 60px);
       margin-top: 60px; } }
 
-section#apresentacao {
+section#presentation {
   display: flex;
   align-items: center;
   justify-content: center;
   background: linear-gradient(rgba(74, 74, 105, 0.8), rgba(74, 74, 105, 0.8)), url("../../assets/images/geovanna-bg-presentation.jpg");
   background-position: center center; }
 
-section#servicos {
+section#services {
   background: linear-gradient(rgba(34, 34, 59, 0.84), rgba(34, 34, 59, 0.98)), url("../../assets/images/geovanna-bg-services.jpg");
   background-position: center center;
   background-size: cover; }
 
-section#contato {
+section#contact {
   background: linear-gradient(rgba(34, 34, 59, 0.8), rgba(34, 34, 59, 0.9)), url("../../assets/images/geovanna-bg-contact.jpg");
   background-position: center center; }
