--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -54,13 +54,174 @@ p {
 * {
   outline: none !important; }
 
-.center-translate, #content-services img {
+.center-translate, #content-presentation img, #content-services img {
   left: 50%;
   position: relative;
   -webkit-transform: translate(-50%, 0) !important;
   -moz-transform: translate(-50%, 0) !important;
   -ms-transform: translate(-50%, 0) !important;
   transform: translate(-50%, 0) !important; }
+
+#content-home h2,
+#content-home h3 {
+  font-family: "AfterMidnite", sans-serif;
+  color: #F2E9E4;
+  text-align: center; }
+
+#content-home h2 {
+  font-size: 6.5rem; }
+  @media only screen and (max-width: 1200px) {
+    #content-home h2 {
+      font-size: 5.5rem; } }
+  @media only screen and (max-width: 992px) {
+    #content-home h2 {
+      font-size: 5rem; } }
+  @media only screen and (max-width: 768px) {
+    #content-home h2 {
+      font-size: 4rem; } }
+  @media only screen and (max-width: 480px) {
+    #content-home h2 {
+      font-size: 3rem; } }
+  @media only screen and (max-width: 320px) {
+    #content-home h2 {
+      font-size: 2.5rem; } }
+
+#content-home h3 {
+  font-size: 4rem;
+  margin-bottom: 4rem; }
+  @media only screen and (max-width: 1200px) {
+    #content-home h3 {
+      font-size: 3.5rem; } }
+  @media only screen and (max-width: 992px) {
+    #content-home h3 {
+      font-size: 3rem; } }
+  @media only screen and (max-width: 768px) {
+    #content-home h3 {
+      font-size: 2rem;
+      margin-top: 2rem; } }
+  @media only screen and (max-width: 320px) {
+    #content-home h3 {
+      font-size: 1.5rem;
+      margin-top: 1.5rem; } }
+
+#content-home h4 {
+  font-family: "TrajanPro-Regular", serif;
+  color: #F2E9E4;
+  text-align: center; }
+  #content-home h4 .hl {
+    color: #9A8C98; }
+  @media only screen and (max-width: 768px) {
+    #content-home h4 {
+      font-size: 1.2rem; } }
+
+#content-home button {
+  margin-top: 4rem; }
+
+#content-presentation h2,
+#content-presentation h3 {
+  font-family: "TrajanPro-Regular", serif;
+  color: #F2E9E4;
+  text-align: center; }
+
+#content-presentation h2 {
+  font-size: 2rem; }
+  @media only screen and (max-width: 768px) {
+    #content-presentation h2 {
+      font-size: 1.4rem; } }
+
+#content-presentation h3 {
+  font-size: 1rem;
+  font-family: "Montserrat", sans-serif; }
+
+#content-presentation img {
+  margin: 2.5rem 0;
+  height: 80px; }
+
+#content-presentation button {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem; }
+
+#content-contact {
+  text-align: center; }
+  #content-contact h2 {
+    font-family: "AfterMidnite", sans-serif;
+    color: #F2E9E4;
+    font-size: 6rem;
+    margin-bottom: 3rem;
+    text-align: center; }
+    @media only screen and (max-width: 768px) {
+      #content-contact h2 {
+        font-size: 4rem; } }
+    @media only screen and (max-width: 480px) {
+      #content-contact h2 {
+        font-size: 3rem; } }
+  #content-contact img {
+    height: 120px; }
+    @media only screen and (max-width: 768px) {
+      #content-contact img {
+        height: 100px; } }
+    @media only screen and (max-width: 480px) {
+      #content-contact img {
+        height: 80px; } }
+  #content-contact h3 {
+    font-family: "TrajanPro-Regular", serif;
+    color: #C9ADA7;
+    margin-top: 4rem;
+    margin-bottom: 6rem; }
+    @media only screen and (max-width: 768px) {
+      #content-contact h3 {
+        font-size: 1.5rem;
+        margin-bottom: 3rem; } }
+    @media only screen and (max-width: 480px) {
+      #content-contact h3 {
+        font-size: 1.2rem; } }
+  #content-contact h4 {
+    font-family: "TrajanPro-Regular", serif;
+    color: #C9ADA7;
+    font-size: 1.5rem; }
+    @media only screen and (max-width: 768px) {
+      #content-contact h4 {
+        font-size: 1.3rem; } }
+    @media only screen and (max-width: 480px) {
+      #content-contact h4 {
+        font-size: 1.2rem; } }
+  #content-contact p {
+    font-size: 1.2em;
+    color: #F2E9E4; }
+    #content-contact p.bigger {
+      font-size: 2rem; }
+    #content-contact p small {
+      font-size: 1rem;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      position: relative;
+      float: left;
+      margin-bottom: 2rem; }
+    @media only screen and (max-width: 768px) {
+      #content-contact p {
+        font-size: 0.9rem; } }
+  #content-contact ul {
+    padding: 0;
+    margin: 0;
+    margin-top: 2.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    #content-contact ul li {
+      border: 2px solid #F2E9E4;
+      padding: 13px;
+      border-radius: 50%;
+      list-style-type: none; }
+      #content-contact ul li:first-child {
+        margin-right: 15px; }
+      #content-contact ul li a img {
+        height: 35px;
+        width: 35px; }
+        @media only screen and (max-width: 768px) {
+          #content-contact ul li a img {
+            height: 20px;
+            width: 20px; } }
 
 #content-about h2 {
   font-family: "AfterMidnite", sans-serif;
