--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -10,4 +10,5 @@
 @import 'includes/_fonts-definitions.scss';
 @import 'includes/_fonts-styles.scss';
 @import 'includes/_sizes.scss';
-@import 'includes/_shared.scss';
+@import 'includes/_globals.scss';
+@import 'includes/_main.scss';
