--- a/src/components/Content/ContentContact/content-contact.scss
+++ b/src/components/Content/ContentContact/content-contact.scss
@@ -1,6 +1,7 @@
 @import '../../../assets/styles/imports/_imports.scss';
 
-#contant-contact{
+#content-contact{
+    text-align: center;
     h2 {
         font-family: $font-secondary;
         color: $color-light;
